# movie-rec-system

./: .dockerignore  .env  .gitignore  .movies_data.duckdb.metadata  Dockerfile  README.md  docker-compose.yml  movies_data.duckdb  movies_data.duckdb.wal  pipeline.yaml  pyproject.toml
.github/workflows/: Docker_build_push.yml  docker-image.yml
app/: frontend_app.py  recommender.py  recommenderhelper.py
etl/: eda.ipynb  extract.py
frontend/: Dockerfile  frontend_app.py  pyproject.toml
movie_rec_system/app/: app.py  recommender.py  recommenderhelper.py
movie_rec_system/etl/: .movies_data.duckdb.metadata  eda.ipynb  extract.py  movies_data.duckdb
movie_rec_system/products/: .eda-pipeline.ipynb.metadata
products/: .eda-pipeline.ipynb.metadata  .extract-pipeline.ipynb.metadata  eda-pipeline.ipynb  extract-pipeline.ipynb
tests/: test_app.py
